added edgeCentric and vertexCentric SI methods

--- a/arachne/examples/subgraph_searching.ipynb
+++ b/arachne/examples/subgraph_searching.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21+0.gcf6eeacde.dirty\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import arkouda as ak\n",
@@ -13,16 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    }
+   ],
    "source": [
     "ak.connect(\"n82\", 5555)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 50_000\n",
+    "n = 60_000\n",
     "p = 0.0005\n",
     "seed = 42\n",
     "num_node_lbls = 2\n",
@@ -103,26 +126,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "src = [0, 1, 0]\n",
-    "dst = [1, 2, 2]"
+    "src = [0, 1, 2, 0]\n",
+    "dst = [1, 2, 0, 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Built G(n,p) graph with 60,000 vertices and 1,800,598 edges.\n"
+     ]
+    }
+   ],
+   "source": [
+    "G_no_attributes = get_gnp_random_graph(n, p, seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "H_no_attributes = build_subgraph(src, dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding 802_541 isos with SI took 0.87 seconds\n",
+      "Finding 802_541 isos with PS took 17.10 seconds\n",
+      "Finding 802_541 isos with SI (count-only) took 0.89 seconds\n",
+      "Finding 802_541 isos with PS (count-only) took 18.38 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run structural subgraph isomorphism.\n",
+    "start = time.time()\n",
+    "results1 = ar.subgraph_isomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"vertices\", algorithm_type=\"si\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {len(results1[0]) // len(H_no_attributes):_} isos with SI took {end-start:.2f} seconds\")\n",
+    "\n",
+    "start = time.time()\n",
+    "results2 = ar.subgraph_isomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"vertices\", algorithm_type=\"ps\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {len(results2[0]) // len(H_no_attributes):_} isos with PS took {end-start:.2f} seconds\")\n",
+    "\n",
+    "start = time.time()\n",
+    "results3 = ar.subgraph_isomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"count\", algorithm_type=\"si\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {results3:_} isos with SI (count-only) took {end-start:.2f} seconds\")\n",
+    "\n",
+    "start = time.time()\n",
+    "results4 = ar.subgraph_isomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"count\", algorithm_type=\"ps\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {results4:_} isos with PS (count-only) took {end-start:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding 805_363 monos with SI took 0.99 seconds\n",
+      "Finding 805_363 monos with PS took 17.92 seconds\n",
+      "Finding 805_363 monos with SI (count-only) took 0.90 seconds\n",
+      "Finding 805_363 monos with PS (count-only) took 19.81 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run structural subgraph monomorphism.\n",
+    "start = time.time()\n",
+    "results1 = ar.subgraph_monomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"vertices\", algorithm_type=\"si\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {len(results1[0]) // len(H_no_attributes):_} monos with SI took {end-start:.2f} seconds\")\n",
+    "\n",
+    "start = time.time()\n",
+    "results2 = ar.subgraph_monomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"vertices\", algorithm_type=\"ps\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {len(results2[0]) // len(H_no_attributes):_} monos with PS took {end-start:.2f} seconds\")\n",
+    "\n",
+    "start = time.time()\n",
+    "results3 = ar.subgraph_monomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"count\", algorithm_type=\"si\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {results3:_} monos with SI (count-only) took {end-start:.2f} seconds\")\n",
+    "\n",
+    "start = time.time()\n",
+    "results4 = ar.subgraph_monomorphism(G_no_attributes, H_no_attributes, return_isos_as=\"count\", algorithm_type=\"ps\")\n",
+    "end = time.time()\n",
+    "print(f\"Finding {results4:_} monos with PS (count-only) took {end-start:.2f} seconds\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Built G(n,p) graph with 60,000 vertices and 1,800,598 edges.\n"
+     ]
+    }
+   ],
    "source": [
     "G = get_gnp_random_graph(n, p, seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,63 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run structural subgraph isomorphism.\n",
-    "start = time.time()\n",
-    "results1 = ar.subgraph_isomorphism(G, H, return_isos_as=\"vertices\", algorithm_type=\"si\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {len(results1[0]) // len(H):_} isos with SI took {end-start:.2f} seconds\")\n",
-    "\n",
-    "start = time.time()\n",
-    "results2 = ar.subgraph_isomorphism(G, H, return_isos_as=\"vertices\", algorithm_type=\"ps\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {len(results2[0]) // len(H):_} isos with PS took {end-start:.2f} seconds\")\n",
-    "\n",
-    "start = time.time()\n",
-    "results3 = ar.subgraph_isomorphism(G, H, return_isos_as=\"count\", algorithm_type=\"si\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {results3:_} isos with SI (count-only) took {end-start:.2f} seconds\")\n",
-    "\n",
-    "start = time.time()\n",
-    "results4 = ar.subgraph_isomorphism(G, H, return_isos_as=\"count\", algorithm_type=\"ps\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {results3:_} isos with PS (count-only) took {end-start:.2f} seconds\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run structural subgraph monomorphism.\n",
-    "start = time.time()\n",
-    "results1 = ar.subgraph_monomorphism(G, H, return_isos_as=\"vertices\", algorithm_type=\"si\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {len(results1[0]) // len(H):_} monos with SI took {end-start:.2f} seconds\")\n",
-    "\n",
-    "start = time.time()\n",
-    "results2 = ar.subgraph_monomorphism(G, H, return_isos_as=\"vertices\", algorithm_type=\"ps\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {len(results2[0]) // len(H):_} monos with PS took {end-start:.2f} seconds\")\n",
-    "\n",
-    "start = time.time()\n",
-    "results3 = ar.subgraph_monomorphism(G, H, return_isos_as=\"count\", algorithm_type=\"si\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {results3:_} monos with SI (count-only) took {end-start:.2f} seconds\")\n",
-    "\n",
-    "start = time.time()\n",
-    "results4 = ar.subgraph_monomorphism(G, H, return_isos_as=\"count\", algorithm_type=\"ps\")\n",
-    "end = time.time()\n",
-    "print(f\"Finding {results3:_} monos with PS (count-only) took {end-start:.2f} seconds\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,9 +284,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding 4 isos with SI took 0.27 seconds\n",
+      "Finding 4 isos with PS took 21.88 seconds\n",
+      "Finding 4 isos with SI (count-only) took 0.24 seconds\n",
+      "Finding 4 isos with PS (count-only) took 21.97 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# Run semantic subgraph isomorphism.\n",
     "start = time.time()\n",
@@ -228,14 +318,25 @@
     "start = time.time()\n",
     "results4 = ar.subgraph_isomorphism(G, H, return_isos_as=\"count\", algorithm_type=\"ps\")\n",
     "end = time.time()\n",
-    "print(f\"Finding {results3:_} isos with PS (count-only) took {end-start:.2f} seconds\")"
+    "print(f\"Finding {results4:_} isos with PS (count-only) took {end-start:.2f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finding 4 monos with SI took 0.27 seconds\n",
+      "Finding 4 monos with PS took 21.55 seconds\n",
+      "Finding 4 monos with SI (count-only) took 0.23 seconds\n",
+      "Finding 4 monos with PS (count-only) took 21.19 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# Run semantic subgraph monomorphism.\n",
     "start = time.time()\n",
@@ -256,7 +357,7 @@
     "start = time.time()\n",
     "results4 = ar.subgraph_monomorphism(G, H, return_isos_as=\"count\", algorithm_type=\"ps\")\n",
     "end = time.time()\n",
-    "print(f\"Finding {results3:_} monos with PS (count-only) took {end-start:.2f} seconds\")"
+    "print(f\"Finding {results4:_} monos with PS (count-only) took {end-start:.2f} seconds\")"
    ]
   }
  ],
