--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -113,7 +113,39 @@
    "execution_count": null,
    "id": "c6537651",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 688\n",
+      "Number of edges: 1079\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.66 seconds.\n",
+      "motif_counting started for yeast...\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
