--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f651e065",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -139,10 +139,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 688\n",
-      "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.66 seconds.\n",
-      "motif_counting started for yeast...\n"
+      "Number of nodes: 252\n",
+      "Number of edges: 399\n",
+      "Building property graph with 252 vertices and 399 edges took 1.59 seconds.\n"
      ]
     }
    ],
@@ -210,7 +209,10 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "# file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "# file_path = \"/scratch/users/md724/Kavosh/networks/simple_1\"\n",
+    "# /scratch/users/md724/Kavosh/networks/random_0005_10000.txt\n",
+    "file_path =\"/scratch/users/md724/Kavosh/networks/elec\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
     "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
     "\n",
@@ -262,7 +264,26 @@
     "prop_graph.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\",\n",
     "                                relationship_columns=[\"rels1\", \"rels2\"])\n",
     "prop_graph.load_node_attributes(node_df, node_column=\"nodes\", label_columns=[\"lbls1\", \"lbls2\"])\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e9637154",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "motif_counting started for yeast...\n",
+      "motif_counting for yeast took 0.04 seconds.\n",
+      "isos =  (array([10 0 0 0]), array([1121 0 0 0]))\n"
+     ]
+    }
+   ],
+   "source": [
     "print(\"motif_counting started for yeast...\")\n",
     "start = time.time()\n",
     "\n",
@@ -276,7 +297,16 @@
     "\n",
     "        f\" took {round(exec_time,2)} seconds.\")\n",
     "print(\"isos = \", isos)\n",
-    "# isos = ar.motif_counting(prop_graph, 5)\n",
+    "# isos = ar.motif_counting(prop_graph, 5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "982a93a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ak.shutdown()"
    ]
   },
