--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -139,9 +139,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 252\n",
-      "Number of edges: 399\n",
-      "Building property graph with 252 vertices and 399 edges took 1.59 seconds.\n"
+      "Number of nodes: 10000\n",
+      "Number of edges: 49644\n",
+      "Building property graph with 9999 vertices and 49644 edges took 1.7 seconds.\n"
      ]
     }
    ],
@@ -154,7 +154,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n81\", 5555)\n",
+    "ak.connect(\"n103\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -209,10 +209,10 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "# file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "#file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
     "# file_path = \"/scratch/users/md724/Kavosh/networks/simple_1\"\n",
-    "# /scratch/users/md724/Kavosh/networks/random_0005_10000.txt\n",
-    "file_path =\"/scratch/users/md724/Kavosh/networks/elec\"\n",
+    "file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_10000.txt\"\n",
+    "# file_path =\"/scratch/users/md724/Kavosh/networks/elec\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
     "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
     "\n",
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e9637154",
    "metadata": {},
    "outputs": [
@@ -277,9 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "motif_counting started for yeast...\n",
-      "motif_counting for yeast took 0.04 seconds.\n",
-      "isos =  (array([10 0 0 0]), array([1121 0 0 0]))\n"
+      "motif_counting started for yeast...\n"
      ]
     }
    ],
@@ -302,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "982a93a7",
    "metadata": {},
    "outputs": [],
