connect  LogLevel.DEBUG to verbose

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -110,24 +110,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -139,9 +125,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 10000\n",
-      "Number of edges: 49644\n",
-      "Building property graph with 9999 vertices and 49644 edges took 1.7 seconds.\n"
+      "Number of nodes: 688\n",
+      "Number of edges: 1079\n",
+      "Building property graph with 688 vertices and 1079 edges took 1.69 seconds.\n"
      ]
     }
    ],
@@ -209,9 +195,9 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "#file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
     "# file_path = \"/scratch/users/md724/Kavosh/networks/simple_1\"\n",
-    "file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_10000.txt\"\n",
+    "#file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_10000.txt\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/elec\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
     "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
@@ -269,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e9637154",
    "metadata": {},
    "outputs": [
@@ -277,7 +263,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "motif_counting started for yeast...\n"
+      "motif_counting started for yeast...\n",
+      "motif_counting for yeast took 33.39 seconds.\n",
+      "isos =  (array([7 0 0 0]), array([0 0 0 ... 1 1 0]))\n"
      ]
     }
    ],
@@ -300,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "982a93a7",
    "metadata": {},
    "outputs": [],
