Fixed verificatio and added new map

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
      "text": [
       "Number of nodes: 688\n",
       "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.69 seconds.\n"
+      "Building property graph with 688 vertices and 1079 edges took 1.74 seconds.\n"
      ]
     }
    ],
@@ -195,8 +195,9 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
-    "# file_path = \"/scratch/users/md724/Kavosh/networks/simple_1\"\n",
+    "#file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "#file_path = \"/scratch/users/md724/Kavosh/networks/simple_1\"\n",
+    "file_path = \"/scratch/users/md724/Kavosh/networks/elec\"\n",
     "#file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_10000.txt\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/elec\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
@@ -255,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "e9637154",
    "metadata": {},
    "outputs": [
@@ -264,8 +265,9 @@
      "output_type": "stream",
      "text": [
       "motif_counting started for yeast...\n",
-      "motif_counting for yeast took 33.39 seconds.\n",
-      "isos =  (array([7 0 0 0]), array([0 0 0 ... 1 1 0]))\n"
+      "motif_counting for yeast took 0.66 seconds.\n",
+      "isos =  (array([34 34 183174 34]), array([0 0 0 ... 1 1 0]))\n",
+      "uniqueMotifClasses.size, globalClasses.size, globalMotifCount.read(), motifCounts.size \n"
      ]
     }
    ],
@@ -274,7 +276,7 @@
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 3, \n",
+    "isos = ar.motif_counting(prop_graph, 4, \n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
@@ -283,12 +285,13 @@
     "\n",
     "        f\" took {round(exec_time,2)} seconds.\")\n",
     "print(\"isos = \", isos)\n",
+    "print(\"uniqueMotifClasses.size, globalClasses.size, globalMotifCount.read(), motifCounts.size \")\n",
     "# isos = ar.motif_counting(prop_graph, 5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "982a93a7",
    "metadata": {},
    "outputs": [],
