ASWS implemented first version

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -12,125 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f651e065",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import arkouda as ak\n",
-    "import arachne as ar\n",
-    "import scipy as sp\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35c305f2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import arkouda as ak\n",
-    "import arachne as ar\n",
-    "import scipy as sp\n",
-    "import networkx as nx\n",
-    "import matplotlib.pyplot as plt\n",
-    "import os\n",
-    "import time\n",
-    "\n",
-    "ak.connect(\"n81\", 5555)\n",
-    "n = 100\n",
-    "m = 1000\n",
-    "s = 2\n",
-    "x = 2\n",
-    "y = 2\n",
-    "\n",
-    "### Build graph from randomly generated source and destination arrays.\n",
-    "# 1. Use Arkouda's randint to generate the random edge arrays.\n",
-    "\n",
-    "#src = ak.array([1, 2, 1, 3, 4, 2, 5, 4, 5, 6, 3, 8, 9, 4, 9, 10])\n",
-    "#dst = ak.array([0, 1, 3, 4, 1, 4, 2, 5, 6, 7, 8, 9, 3, 9, 10, 4])#\n",
-    "# \n",
-    "src = ak.array([0, 1,2,2,3,4])\n",
-    "dst = ak.array([1, 2,0,3,4,2])\n",
-    "\n",
-    "# 2. Build temporary property graph to get sorted edges and nodes lists.\n",
-    "temp_prop_graph = ar.PropGraph()\n",
-    "start = time.time()\n",
-    "temp_prop_graph.add_edges_from(src, dst)\n",
-    "end = time.time()\n",
-    "build_time = end - start\n",
-    "print(f\"Building property graph with {len(temp_prop_graph)} vertices and \"\n",
-    "        f\"{temp_prop_graph.size()} \"\n",
-    "        f\"edges took {round(build_time,2)} seconds.\")\n",
-    "\n",
-    "### Generate node labels and edge relationships for the graph.\n",
-    "# 1. Extract node and edge information.\n",
-    "num_edges = temp_prop_graph.size()\n",
-    "num_nodes = len(temp_prop_graph)\n",
-    "edges = temp_prop_graph.edges()\n",
-    "nodes = temp_prop_graph.nodes()\n",
-    "\n",
-    "# 2. Generate sets of node labels and edge relationships.\n",
-    "labels_set = ak.array([\"lbl\" + str(x) for x in range(1,x+1)])\n",
-    "relationships_set = ak.array([\"rel\" + str(y) for y in range(1,y+1)])\n",
-    "\n",
-    "# 3. Give edges and nodes same exact labels and relationships.\n",
-    "node_labels_1 = ak.full(num_nodes, labels_set[0])\n",
-    "node_labels_2 = ak.full(num_nodes, labels_set[1])\n",
-    "edge_rels_1 = ak.full(num_edges, relationships_set[0])\n",
-    "edge_rels_2 = ak.full(num_edges, relationships_set[1])\n",
-    "\n",
-    "# 4. Create dataframe to load into a new property graph.\n",
-    "edge_df = ak.DataFrame({\"src\":edges[0], \"dst\":edges[1], \"rels1\":edge_rels_1, \"rels2\":edge_rels_2})\n",
-    "node_df = ak.DataFrame({\"nodes\":nodes, \"lbls1\":node_labels_1, \"lbls2\":node_labels_2})\n",
-    "\n",
-    "# 5. Create new property graph with node labels and edge relationships.\n",
-    "prop_graph = ar.PropGraph()\n",
-    "prop_graph.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\",\n",
-    "                                relationship_columns=[\"rels1\", \"rels2\"])\n",
-    "prop_graph.load_node_attributes(node_df, node_column=\"nodes\", label_columns=[\"lbls1\", \"lbls2\"])\n",
-    "\n",
-    "print(\"motif_counting started ...\")\n",
-    "start = time.time()\n",
-    "\n",
-    "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 4, \n",
-    "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
-    "\n",
-    "end = time.time()\n",
-    "exec_time = end - start\n",
-    "print(f\"motif_counting \"\n",
-    "\n",
-    "        f\" took {round(exec_time,2)} seconds.\")\n",
-    "# isos = ar.motif_counting(prop_graph, 5)\n",
-    "ak.shutdown()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c6537651",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "connected to arkouda server tcp://*:5555\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of nodes: 688\n",
-      "Number of edges: 1079\n",
-      "Building property graph with 688 vertices and 1079 edges took 1.74 seconds.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -140,7 +24,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n103\", 5555)\n",
+    "ak.connect(\"n0041\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -197,7 +81,8 @@
     "# Define the file path\n",
     "#file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
     "#file_path = \"/scratch/users/md724/Kavosh/networks/simple_1\"\n",
-    "file_path = \"/scratch/users/md724/Kavosh/networks/elec\"\n",
+    "#file_path = \"/scratch/users/md724/Kavosh/networks/elec\"\n",
+    "file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
     "#file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_10000.txt\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/elec\"\n",
     "# file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
@@ -256,27 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "e9637154",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "motif_counting started for yeast...\n",
-      "motif_counting for yeast took 0.66 seconds.\n",
-      "isos =  (array([34 34 183174 34]), array([0 0 0 ... 1 1 0]))\n",
-      "uniqueMotifClasses.size, globalClasses.size, globalMotifCount.read(), motifCounts.size \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"motif_counting started for yeast...\")\n",
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 4, \n",
+    "isos = ar.motif_counting(prop_graph, 3, \n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
@@ -291,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "982a93a7",
    "metadata": {},
    "outputs": [],
@@ -1309,7 +1183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "arkouda-dev",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1323,7 +1197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
