ASWS most complicated FIRST priority

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,10 +11,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c6537651",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "connected to arkouda server tcp://*:5555\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of nodes: 1000\n",
+      "Number of edges: 49621\n",
+      "Building property graph with 1000 vertices and 49621 edges took 0.07 seconds.\n"
+     ]
+    }
+   ],
    "source": [
     "import arkouda as ak\n",
     "import arachne as ar\n",
@@ -24,7 +41,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n0041\", 5555)\n",
+    "ak.connect(\"n0009\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -79,13 +96,12 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "#file_path = \"/scratch/users/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
-    "#file_path = \"/scratch/users/md724/Kavosh/networks/simple_1\"\n",
-    "#file_path = \"/scratch/users/md724/Kavosh/networks/elec\"\n",
-    "file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
-    "#file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_10000.txt\"\n",
-    "# file_path =\"/scratch/users/md724/Kavosh/networks/elec\"\n",
-    "# file_path =\"/scratch/users/md724/Kavosh/networks/random_0005_100_000.txt\"\n",
+    "#file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "# file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_1000.txt\"\n",
+    "# file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_100000.txt\"\n",
+    "file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.05_1000.txt\"\n",
+    "# file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/elec\"\n",
+    "\n",
     "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
     "\n",
     "# Display the results\n",
@@ -141,10 +157,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e9637154",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "motif_counting started for yeast...\n",
+      "motif_counting for .... took 9.9 seconds.\n",
+      "isos =  (array([13 13 4372790 13]), array([0 0 0 ... 1 1 0]))\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"motif_counting started for yeast...\")\n",
     "start = time.time()\n",
@@ -155,17 +181,17 @@
     "\n",
     "end = time.time()\n",
     "exec_time = end - start\n",
-    "print(f\"motif_counting for yeast\"\n",
+    "print(f\"motif_counting for ....\"\n",
     "\n",
     "        f\" took {round(exec_time,2)} seconds.\")\n",
     "print(\"isos = \", isos)\n",
-    "print(\"uniqueMotifClasses.size, globalClasses.size, globalMotifCount.read(), motifCounts.size \")\n",
+    "# print(\"uniqueMotifClasses.size, globalClasses.size, globalMotifCount.read(), motifCounts.size \")\n",
     "# isos = ar.motif_counting(prop_graph, 5)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "982a93a7",
    "metadata": {},
    "outputs": [],
