Comprehensive mathematical granteed

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,10 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -28,7 +42,7 @@
      "text": [
       "Number of nodes: 1000\n",
       "Number of edges: 49621\n",
-      "Building property graph with 1000 vertices and 49621 edges took 0.09 seconds.\n"
+      "Building property graph with 1000 vertices and 49621 edges took 0.06 seconds.\n"
      ]
     }
    ],
@@ -157,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "e9637154",
    "metadata": {},
    "outputs": [
@@ -166,8 +180,8 @@
      "output_type": "stream",
      "text": [
       "motif_counting started for yeast...\n",
-      "motif_counting for .... took 2.84 seconds.\n",
-      "isos =  (array([13 13 838152 13]), array([0 0 0 ... 1 1 0]))\n"
+      "motif_counting for .... took 4.18 seconds.\n",
+      "isos =  (array([13 13 809391 13]), array([0 0 0 ... 1 1 0]))\n"
      ]
     }
    ],
@@ -191,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "982a93a7",
    "metadata": {},
    "outputs": [],
