--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,24 +11,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    _         _                   _       \n",
-      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
-      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
-      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
-      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
-      "                                          \n",
-      "\n",
-      "Client Version: v2024.06.21\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -40,9 +26,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 1000\n",
-      "Number of edges: 49621\n",
-      "Building property graph with 1000 vertices and 49621 edges took 0.06 seconds.\n"
+      "Number of nodes: 688\n",
+      "Number of edges: 1079\n",
+      "Building property graph with 688 vertices and 1079 edges took 0.09 seconds.\n",
+      "motif_counting started for ...\n",
+      "motif_counting for .... took 0.27 seconds.\n",
+      "isos =  (array([34 34 56218 34]), array([0 0 0 ... 1 1 0]))\n"
      ]
     }
    ],
@@ -110,10 +99,10 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "#file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
-    "# file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_1000.txt\"\n",
+    "file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_1000.txt\"\n",
     "# file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_100000.txt\"\n",
-    "file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.05_1000.txt\"\n",
+    "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.05_1000.txt\"\n",
     "# file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/elec\"\n",
     "\n",
     "src, dst, num_nodes = read_graph_to_arkouda(file_path)\n",
@@ -166,31 +155,12 @@
     "prop_graph.load_edge_attributes(edge_df, source_column=\"src\", destination_column=\"dst\",\n",
     "                                relationship_columns=[\"rels1\", \"rels2\"])\n",
     "prop_graph.load_node_attributes(node_df, node_column=\"nodes\", label_columns=[\"lbls1\", \"lbls2\"])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "e9637154",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "motif_counting started for yeast...\n",
-      "motif_counting for .... took 4.18 seconds.\n",
-      "isos =  (array([13 13 809391 13]), array([0 0 0 ... 1 1 0]))\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"motif_counting started for yeast...\")\n",
+    "###########################################################################################\n",
+    "print(\"motif_counting started for ...\")\n",
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 3, 1,\n",
+    "isos = ar.motif_counting(prop_graph, 4, 1,\n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
@@ -200,17 +170,9 @@
     "        f\" took {round(exec_time,2)} seconds.\")\n",
     "print(\"isos = \", isos)\n",
     "# print(\"uniqueMotifClasses.size, globalClasses.size, globalMotifCount.read(), motifCounts.size \")\n",
-    "# isos = ar.motif_counting(prop_graph, 5)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "982a93a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ak.shutdown()"
+    "# isos = ar.motif_counting(prop_graph, 5)\n",
+    "ak.shutdown()\n",
+    "\n"
    ]
   }
  ],
