Batch Nauty with new process strategy in Chapel

--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
@@ -30,8 +30,8 @@
       "Number of edges: 1079\n",
       "Building property graph with 688 vertices and 1079 edges took 0.04 seconds.\n",
       "motif_counting started for ...\n",
-      "motif_counting for .... took 0.81 seconds.\n",
-      "isos =  (array([34 34 183174 34]), array([0 0 0 ... 1 1 0]))\n"
+      "motif_counting for .... took 26.28 seconds.\n",
+      "isos =  (array([0 34 183174 0]), array([0]))\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n0038\", 5555)\n",
+    "ak.connect(\"n0014\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
