--- a/arachne/analysis_pipeline_sample.ipynb
+++ b/arachne/analysis_pipeline_sample.ipynb
@@ -11,10 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c6537651",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    _         _                   _       \n",
+      "   / \\   _ __| | _____  _   _  __| | __ _ \n",
+      "  / _ \\ | '__| |/ / _ \\| | | |/ _` |/ _` |\n",
+      " / ___ \\| |  |   < (_) | |_| | (_| | (_| |\n",
+      "/_/   \\_\\_|  |_|\\_\\___/ \\__,_|\\__,_|\\__,_|\n",
+      "                                          \n",
+      "\n",
+      "Client Version: v2024.06.21\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -26,10 +40,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of nodes: 100000\n",
-      "Number of edges: 4999177\n",
-      "Building property graph with 100000 vertices and 4999177 edges took 1.1 seconds.\n",
-      "motif_counting started for ...\n"
+      "Number of nodes: 688\n",
+      "Number of edges: 1079\n",
+      "Building property graph with 688 vertices and 1079 edges took 0.19 seconds.\n",
+      "motif_counting started for ...\n",
+      "motif_counting for .... took 3685.33 seconds.\n",
+      "isos =  (array([0 4809 415923534 0]), array([0]))\n"
      ]
     }
    ],
@@ -42,7 +58,7 @@
     "import os\n",
     "import time\n",
     "\n",
-    "ak.connect(\"n0057\", 5555)\n",
+    "ak.connect(\"n0077\", 5555)\n",
     "n = 100\n",
     "m = 1000\n",
     "s = 2\n",
@@ -97,9 +113,9 @@
     "    return ak_src, ak_dst, num_nodes\n",
     "\n",
     "# Define the file path\n",
-    "#file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
+    "file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/yeast\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_1000.txt\"\n",
-    "file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_100000.txt\"\n",
+    "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.0005_100000.txt\"\n",
     "#file_path = \"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/random_0.05_1000.txt\"\n",
     "# file_path =\"/mmfs1/home/md724/arkouda-njit/arachne/data/motifCounting/elec\"\n",
     "\n",
@@ -158,7 +174,7 @@
     "start = time.time()\n",
     "\n",
     "# isos = ar.motif_counting(prop_graph, subgraph, semantic_check=\"or\"\n",
-    "isos = ar.motif_counting(prop_graph, 3 ,0,\n",
+    "isos = ar.motif_counting(prop_graph, 7 ,1,\n",
     "                                             algorithm_type=\"si\", return_isos_as=\"vertices\")\n",
     "\n",
     "end = time.time()\n",
